# yagupov_fastapi

./: .gitignore  .pylintrc  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
tests/: test_status.py
yagupov_fastapi/: main.py  settings.py
